--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,13 @@
       <font face="Comic sans MS"> COMIC SAAAAAAANS </font>
     </h1>
     <form action="/bepis" method="POST">
-      Arbitrary text: <input type="text" name="bepis"/>
-      <input type="submit" value="DO IT NERD"/>
+      <label for="POST-name">Trainer Name:</label>
+      <input id="POST-name" type="text" name="name">
+    </br>
+      <label for "POST-pokename">Starter Pokemon:</label>
+      <input id="POST-pokename" type="text" name="pokename">
+    </br>
+      <button type="submit" value="submit">Giff</button>
     </form>
   </body>
 </html>
